# fx-application-services

./: CHANGES_UNRELEASED.md
book/: 404.html  adding-docs.html  android-faqs.html  build-and-publish-pipeline.html  building.html  contributing.html  dependency-management.html  index.html  logging.html  naming-conventions.html  print.html  searchindex.js  searchindex.json
book/adr/: 0000-use-markdown-architectural-decision-records.html  0001-update-logins-api.html  0002-database-corruption.html  0003-swift-packaging.html  0004-early-startup-experiments.html  index.html
book/design/: components-strategy.html  db-pragmas.html  index.html  megazords.html  metrics.html  rust-versions.html  swift-package-manager.html  sync-manager.html  sync-overview.html  test-faster.html
book/howtos/: adding-a-new-component.html  branch-builds.html  building-a-rust-component.html  converting-a-component-to-uniffi.html  cut-a-new-release.html  locally-building-jna.html  locally-published-components-in-fenix.html  locally-published-components-in-firefox-ios.html  locally-published-components-in-focus-ios.html  smoke-testing-app-services.html  testing-a-rust-component.html  upgrading-nss-guide.html  vendoring-into-mozilla-central.html
book/rust-docs/: crates.js  search-index.js  settings.html  source-files.js
book/rust-docs/autofill/: all.html  fn.ffi_autofill_c1ea_rustbuffer_alloc.html  fn.ffi_autofill_c1ea_rustbuffer_free.html  index.html  sidebar-items.js  (+4 more)
components/support/error/: Cargo.toml
components/support/error/src/: handling.rs  lib.rs
tools/: requirements.txt
(+1385 files in other folders)
