[package]
name = "error-support"
version = "0.1.0"
authors = ["Thom Chiovoloni <tchiovoloni@mozilla.com>"]
edition = "2021"
license = "MPL-2.0"
autotests = false

[[test]]
name = "tests"
path = "tests/tests.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }
thiserror = "1"

[dependencies]
log = "0.4"
lazy_static = { version = "1.4", optional = true }
parking_lot = { version = ">=0.11,<=0.12", optional = true }
uniffi = { version = "^0.20", optional = true }
uniffi_macros = { version = "^0.20", optional = true }
error-support-macros = { path = "macros" }

[dependencies.backtrace]
optional = true
version = "0.3"

[features]
default = []
reporting = ["lazy_static", "parking_lot", "uniffi", "uniffi_macros", "uniffi_build"]

[build-dependencies]
uniffi_build = { version = "^0.20", features=["builtin-bindgen"], optional = true }
